--- a/hw-5.ipynb
+++ b/hw-5.ipynb
@@ -233,6 +233,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class K_Means:\n",
+    "    def __init__(self, n_clusters, max_iters=1000):\n",
+    "        self.n_clusters = n_clusters\n",
+    "        self.centroids = None\n",
+    "        self.labels = None\n",
+    "        self.max_iters = max_iters\n",
+    "\n",
+    "    def fit(self, X):\n",
+    "        mins = X.min()\n",
+    "        maxs = X.max()\n",
+    "        self.centroids = np.zeros((self.n_clusters, X.shape[1]))\n",
+    "        for idx, col in enumerate(X.T):\n",
+    "            col_min, col_max = np.min(col), np.max(col)\n",
+    "            for k in range(self.n_clusters):\n",
+    "                self.centroids[k, idx] = np.random.uniform(col_min, col_max, size=(1))\n",
+    "        self.labels = np.random.random_integers(low=0, high=self.n_clusters - 1, size=(X.shape[0]))\n",
+    "        for i in range(self.max_iters):\n",
+    "            print(f\"Iteration {i}\")\n",
+    "            changed = 0\n",
+    "            distances = self.get_distances(X)\n",
+    "            groups = {key: [] for key in range(self.n_clusters)}\n",
+    "            for idx, feat in enumerate(X):\n",
+    "                closest = distances[idx].argmin()\n",
+    "                if self.labels[idx] != closest:\n",
+    "                    self.labels[idx] = closest\n",
+    "                    changed += 1\n",
+    "                groups[closest].append(feat)\n",
+    "            for group in sorted(groups):\n",
+    "                group_feats = groups[group]\n",
+    "                if len(group_feats):\n",
+    "                    self.centroids[group] = np.mean(groups[group], axis=0)\n",
+    "                else:\n",
+    "                    self.centroids[group] = np.random.uniform(mins, maxs, size=(X.shape[1]))\n",
+    "            if not changed:\n",
+    "                break\n",
+    "\n",
+    "    def predict(self, x):\n",
+    "        dist = self.get_distances(x)\n",
+    "        preds = dist.argmin()\n",
+    "        return preds\n",
+    "    \n",
+    "    def get_distances(self, X):\n",
+    "        try:\n",
+    "            p_squared = np.square(X).sum(axis=1)\n",
+    "        except:\n",
+    "            p_squared = np.square(X)\n",
+    "        q_squared = np.square(self.centroids).sum(axis=1)\n",
+    "        product   = -2*X.dot(self.centroids.T)\n",
+    "        distances = np.sqrt(product+q_squared+np.matrix(p_squared).T)\n",
+    "        return distances"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
@@ -240,7 +298,7 @@
     "def vis_bow(train_sifts,test_sifts,n_clusters=100):\n",
     "    stacked_train_sifts = np.vstack(train_sifts)\n",
     "    stacked_test_sifts = np.vstack(test_sifts)\n",
-    "    kmeans = MiniBatchKMeans(n_clusters=n_clusters)\n",
+    "    kmeans = MiniBatchKMeans(n_clusters=n_clusters) # K_Means(n_clusters=n_clusters)\n",
     "    kmeans.fit(stacked_train_sifts)\n",
     "    train_clusters = [kmeans.predict(words) for words in train_sifts]\n",
     "    X_train_bow = np.array([np.bincount(words, minlength=n_clusters) for words in train_clusters])\n",
