--- a/hw-5.ipynb
+++ b/hw-5.ipynb
@@ -497,7 +497,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train_soft,X_test_soft = vis_bow_soft(train_sifts,test_sifts,n_clusters=100)\n",
+    "model = SVC(C=.001,kernel='linear')\n",
+    "model.fit(X_train_soft,y_train)\n",
+    "get_scores(model,X_train_soft,y_train,X_test_soft,y_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -511,7 +516,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# too much work"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -899,137 +906,6 @@
     "model.fit(X_train_cnn,y_train)\n",
     "get_scores(model,X_train_cnn,y_train,X_test_cnn,y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GaussianMixture(covariance_type='full', init_params='kmeans', max_iter=100,\n",
-       "        means_init=None, n_components=10, n_init=1, precisions_init=None,\n",
-       "        random_state=None, reg_covar=1e-06, tol=0.001, verbose=0,\n",
-       "        verbose_interval=10, warm_start=False, weights_init=None)"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#stacked_train_sifts = np.vstack(train_sifts)\n",
-    "#stacked_test_sifts = np.vstack(test_sifts)\n",
-    "gmm = GaussianMixture(n_components=10)\n",
-    "gmm.fit(stacked_train_sifts[:10000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_clusters = [gmm.predict(words) for words in train_sifts[:10000]]\n",
-    "#X_train_bow = np.array([np.bincount(words, minlength=n_clusters) for words in train_clusters])\n",
-    "test_clusters = [gmm.predict(words) for words in test_sifts[:10000]]\n",
-    "#X_test_bow = np.array([np.bincount(words, minlength=n_clusters) for words in test_clusters])\n",
-    "train_clusters[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.8536644703182794e-40"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_clusters_new = [gmm.predict_proba(words) for words in train_sifts[:10000]]\n",
-    "#X_train_bow = np.array([np.bincount(words, minlength=n_clusters) for words in train_clusters])\n",
-    "test_clusters_new = [gmm.predict_proba(words) for words in test_sifts[:10000]]\n",
-    "#X_test_bow = np.array([np.bincount(words, minlength=n_clusters) for words in test_clusters])\n",
-    "train_clusters_new[0][0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4.28636626e-024, 0.00000000e+000, 5.10496106e-103, 4.01856604e-042,\n",
-       "       0.00000000e+000, 1.10778397e-029, 3.63716360e-024, 2.78839665e-029,\n",
-       "       0.00000000e+000, 1.00000000e+000])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_clusters_new[0][5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3017083"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#tmp = test_clusters_new[9]\n",
-    "sum([len(tmp[np.logical_and(tmp>0,tmp<1)]) for tmp in train_clusters_new])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
